# historian

./: .gitignore  AGENTS.md  CONTRIBUTING.md  HISTORIAN_INTEGRATION.md  README.md  ROADMAP.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  debugging.md  integration.md
examples/: vesper-playback-event.json  vesper.historian.json
historian/: __init__.py  app.py  builtin_manifest.json  cli.py  client.py  config.example.json  config.py  debug.py  errors.py  http.py  manifests.py  models.py  resolver.py  service.py  storage.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_debug.py  test_http.py  test_query.py  test_resolver.py  test_storage.py
