[project]
name = "historian"
dynamic = ["version"]
description = "Local event, transcript, and operational-history service for agent applications."
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.12"
dependencies = [
  "a2a-sdk>=1.1,<1.2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jsonschema>=4.20,<5",
  "regex>=2024.5,<2027",
  "sse-starlette>=2.1,<4",
  "uvicorn>=0.30,<1",
]

[project.scripts]
historian = "historian.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["historian"]

[tool.hatch.build.targets.wheel.force-include]
"historian/builtin_manifest.json" = "historian/builtin_manifest.json"
"historian/config.example.json" = "historian/config.example.json"

# Version is derived from git tags via hatch-vcs (setuptools-scm). To cut a
# release, tag the commit (`git tag vX.Y.Z && git push --tags`) — no version
# bump in this file. CI pins SETUPTOOLS_SCM_PRETEND_VERSION=0.0.0 so that
# `uv sync --locked` sees a stable version matching uv.lock regardless of
# git state; release builds (`uv build` at tag time) use the real version.
[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
